--- a/doc/动态.md
+++ b/doc/动态.md
@@ -15,7 +15,7 @@
 ```C++
 enum class SceneType
 {
-	Menu, Game
+	MainMenu, Menu, Game
 };
 ```
 
@@ -246,3 +246,36 @@ Animation(IMAGE new_atlas, int width, int height, int interval, int frame_num, i
 - `new_atlas` 传入使用的IMAGE，函数内部会将传入的这个IMAGE处理过后变为另一个IMAGE，并以指针形式存储于 `atlas` 字段中，所以不会影响到外部传入的IMAGE变量本身，方便复用。
 - `frame_num` 对应 `frame_amount` 字段。
 - `scale` 表示放大比例。显然它只能是正整数。当你使用的图集是像素图时，你可能需要调整这一数值将其放大，不然显示出来可能会很小。  
+
+# 添加了Button类
+
+是Object类的子类 大伙大概率用不到 要用可以问我
+
+
+
+
+##  制作了主菜单
+
+目前只是搭建了框架
+位于 `main.cpp`
+
+	//初始化UI按钮
+	//创建开始游戏按钮
+	RECT startGameRect = { 100, 100, 300, 150 };
+	StartGameButton* startGameBtn = new StartGameButton(startGameRect, _T("start_game_idle.png"), _T("start_game_hovered.png"), _T("start_game_pushed.png"));
+	startGameBtn->scene_belong = &scene;
+	scene.AddObject(startGameBtn);
+	
+	// 创建退出游戏按钮
+	RECT quitGameRect = { 100, 200, 300, 250 };
+	QuitGameButton* quitGameBtn = new QuitGameButton(quitGameRect, _T("quit_game_idle.png"), _T("quit_game_hovered.png"), _T("quit_game_pushed.png"));
+	quitGameBtn->scene_belong = &scene;
+	scene.AddObject(quitGameBtn);
+	
+	// 创建设置按钮
+	RECT settingsRect = { 100, 300, 300, 350 };
+	SettingButton* settingsBtn = new SettingButton(settingsRect, _T("settings_idle.png"), _T("settings_hovered.png"), _T("settings_pushed.png"));
+	settingsBtn->scene_belong = &scene;
+	scene.AddObject(settingsBtn);
+
+简单的做了初始化
